[Fix] Remove !important flag blocking save button visibility
- Removed !important from #saveSection display property
- JavaScript can now properly show/hide save button
- Button appears correctly when table or template name changes

--- a/TemplateWizard/css/template_designer.css
+++ b/TemplateWizard/css/template_designer.css
@@ -50,7 +50,7 @@
 }
 
 #saveSection {
-	display: none !important;
+	display: none;
 }
 
 #templateNameSection {
